--- a/WebContent/WEB-INF/views/inventory.html
+++ b/WebContent/WEB-INF/views/inventory.html
@@ -65,15 +65,15 @@
                         </div>
                         <div class="row" style="padding: 10px" class="col-sm-1">
                             <h4>Custom tags</h4>
-                            <div id="itemTags">
-                                <ul class="list-group">
+                            <div>
+                                <ul class="list-group" id = "customTags">
                                     <li ng-repeat="tag in modalItem.getCustomTags()" class="list-group-item">
-                                        {{tag.name}}
+                                        {{tag.name}}<button class="btn btn-danger pull-right btn-sm" ng-click="removeTag(tag)"><span class="glyphicon glyphicon-remove-sign"></span> Remove</button>
                                     </li>
                                 </ul>
                             </div>
                             <input type="text" ng-model="modalTag.name" id="itemAddTagName" class="form-control" placeholder="Tag name" ng-maxlength="15">
-                            <button id="itemSaveTag" class="btn btn-success" ng-click="addModalTag()"><span class="glyphicon glyphicon-ok-sign"></span> Add tag</button>
+                            <button id="itemSaveTag" class="btn btn-success btn-sm" ng-click="addModalTag()" ng-disabled="!modalTag.name || containsTag(modalItem, modalTag.name)"><span class="glyphicon glyphicon-ok-sign"></span> Add tag</button>
                         </div>
                     </div>
                 </form>
