--- a/WebContent/WEB-INF/views/inventory.html
+++ b/WebContent/WEB-INF/views/inventory.html
@@ -19,16 +19,17 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="row">
-        <div id="filters" style="padding: 20px">
-            <button type="button" class="btn btn-primary" btn-checkbox ng-model="favoriteFiltered" id="filterFavorites" ng-click="filterTag('favorite')"><span class="glyphicon glyphicon-heart"></span> Favorites</button>
-            <button type="button" class="btn btn-warning" btn-checkbox ng-model="shoppingFiltered" id="filterShopping" ng-click="filterTag('shopping')"><span class="glyphicon glyphicon-shopping-cart"></span> Shopping</button>
+        <div id="filters" style="padding: 10px" class="row">
+            <button type="button" class="btn btn-primary" id="filterFavorites" ng-click="filterTag('favorite')"><span class="glyphicon glyphicon-heart"></span> Favorites</button>
+            <button type="button" class="btn btn-warning" id="filterShopping" ng-click="filterTag('shopping')"><span class="glyphicon glyphicon-shopping-cart"></span> Shopping</button>
+            <label for="tagFilter">Filter</label>
+            <input type="text" id="tagFilter" ng-model="tagFilter" ng-maxlength="15" ng-change="filterTag(tagFilter)">
+            <button type="button" class="btn btn-xs btn-danger" id="filterClear" ng-click="filterTag('')" ng-hide="!tagFilter">Clear</button>
         </div>
-        <div id="items" class="col-sm-12" style="padding-left: 20px; padding-right: 20px">
+        <div id="items" class="col-sm-12 row" style="padding-left: 20px; padding-right: 20px">
             <div id="itemGrid" ui-grid="itemGridOptions" ui-grid-selection class="grid"></div>
         </div>
         <br/>
-    </div>
     <div class="row" style="padding: 20px">
         <button id="addItem" class="btn btn-success" ng-click="openItemDialog()"><span class="glyphicon glyphicon-plus-sign"></span> New item</button>
     </div>
