updated angular > 1.4.7, added ngTouch directive

--- a/WebContent/WEB-INF/views/inventory.html
+++ b/WebContent/WEB-INF/views/inventory.html
@@ -94,8 +94,9 @@
     </script>
 </div>
 
-<script src="webjars/angular/1.4.4/angular.min.js" type="application/javascript"></script>
-<script src="webjars/angular-resource/1.4.4/angular-resource.min.js"></script>
+<script src="webjars/angular/1.4.7/angular.min.js" type="application/javascript"></script>
+<script src="webjars/angular-touch/1.4.7/angular-touch.min.js"></script>
+<script src="webjars/angular-resource/1.4.7/angular-resource.min.js"></script>
 <script src="webjars/angular-ui-grid/3.0.7/ui-grid.min.js"></script>
 <script src="webjars/angular-ui-bootstrap/0.14.2/ui-bootstrap-tpls.min.js"></script>
 <script src="assets/js/app.js"></script>
