--- a/WebContent/WEB-INF/views/inventory.html
+++ b/WebContent/WEB-INF/views/inventory.html
@@ -24,7 +24,7 @@
             <button type="button" class="btn btn-warning" id="filterShopping" ng-click="filterTag('shopping')"><span class="glyphicon glyphicon-shopping-cart"></span> Shopping</button>
             <label for="tagFilter">Filter</label>
             <div class="btn-group">
-                <input type="text" id="tagFilter" class="form-control" ng-model="tagFilter" uib-typeahead="tag for tag in allTags | filter:$viewValue" ng-maxlength="15" ng-change="filterTag(tagFilter)">
+                <input type="text" id="tagFilter" class="form-control" ng-model="tagFilter" uib-typeahead="tag for tag in allTags | filter:$viewValue" ng-maxlength="15" maxlength="15" ng-change="filterTag(tagFilter)">
             </div>
             <button type="button" class="btn btn-xs btn-danger" id="filterClear" ng-click="filterTag('')" ng-hide="!tagFilter">Clear</button>
         </div>
@@ -39,7 +39,6 @@
         <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)" dismiss-on-timeout="3000">{{alert.msg}}</uib-alert>
     </div>
 </div>
-
 
 
 <!----------####### modal template ------->
@@ -57,7 +56,7 @@
                             <div class="row">
                                 <label class="sr-only" for="itemAddName">Item name</label>
                                 <input type="text" id="itemAddName" ng-model="modalItem.name" class="form-control"
-                                       placeholder="Item name" ng-maxlength="25" required>
+                                       placeholder="Item name" ng-maxlength="25" maxlength="25" required>
                                 <label class="sr-only" for="itemAddStockLevel">Stock level</label>
                                 <select id="itemAddStockLevel" ng-model="modalItem.stockLevel" class="form-control" required>
                                     <option value='' disabled>Stock Level</option>
@@ -79,7 +78,7 @@
                                     </li>
                                     <li class="list-group-item row custom-tag-li">
                                         <div class="col-xs-6">
-                                             <input type="text" ng-model="modalTag.name" id="itemAddTagName" class="form-control pull-left" placeholder="Tag name" uib-typeahead="tag for tag in allTags | filter:$viewValue" ng-maxlength="15">
+                                             <input type="text" ng-model="modalTag.name" id="itemAddTagName" class="form-control pull-left" placeholder="Tag name" uib-typeahead="tag for tag in allTags | filter:$viewValue" ng-maxlength="15" maxlength="15" >
                                         </div>
                                         <div class="col-xs-6">
                                             <button id="itemSaveTag" class="btn btn-success btn-sm pull-right custom-tag-button" ng-click="addModalTag()" ng-disabled="!modalTag.name || containsTag(modalItem, modalTag.name)"><span class="glyphicon glyphicon-ok-sign"></span> Add tag</button>
