--- a/WebContent/WEB-INF/views/inventory.html
+++ b/WebContent/WEB-INF/views/inventory.html
@@ -13,8 +13,22 @@
 <body ng-app="fridgezone" ng-controller="mainCtrl">
 
 <nav class="navbar navbar-default" role="navigation">
-    <div class="navbar-header">
-        <a class="navbar-brand" href="#">Fridgezone</a>
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <ul class="nav navbar-nav navbar-right navbar-toggle collapsed">
+                <li>
+                    <a href="logout">Logout</a>
+                </li>
+            </ul>
+            <a class="navbar-brand" href="#">Fridgezone</a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="logout">Logout</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
 
