remove angular debug code

--- a/WebContent/WEB-INF/views/inventory.html
+++ b/WebContent/WEB-INF/views/inventory.html
@@ -117,6 +117,7 @@
 <script src="webjars/angular-ui-grid/3.0.7/ui-grid.min.js"></script>
 <script src="webjars/angular-ui-bootstrap/0.14.2/ui-bootstrap-tpls.min.js"></script>
 <script src="assets/js/app.js"></script>
+<script src="assets/js/config.js"></script>
 <script src="assets/js/main.ctrl.js"></script>
 <script src="assets/js/main.modal.ctrl.js"></script>
 <script src="assets/js/services.js"></script>
