refactored frontend directory layout and maven project structure

--- a/src/main/webapp/WEB-INF/views/inventory.html
+++ b/src/main/webapp/WEB-INF/views/inventory.html
@@ -111,6 +111,8 @@
     </script>
 </div>
 
+<ng-include src="'assets/views/partials/itemModal.html'"/>
+
 <script src="webjars/angular/1.4.7/angular.min.js" type="application/javascript"></script>
 <script src="webjars/angular-touch/1.4.7/angular-touch.min.js"></script>
 <script src="webjars/angular-resource/1.4.7/angular-resource.min.js"></script>
